tests/baselines/reference/parserComputedPropertyName22.errors.txt
parserComputedPropertyName22.ts(2,6): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName22.ts (1 errors) ====
    declare class C {
        [e]: number 
         ~
!!! error TS2304: Cannot find name 'e'.
    }